--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,7 @@
             <div><img src="../../assets/images/userDP.jpg" alt="HR Dp"></div>
           </div>
           <div>
-            <p>Name: <span class="p" style="font-weight: 600;">{{userData.username}}</span></p>
+            <p>User Name: <span class="p" style="font-weight: 600;">{{userData.username}}</span></p>
             <p>User ID: <span class="p" style="font-weight: 600;">{{userData.user_id}}</span></p>
             <p>Email: <span class="p" style="font-weight: 600;">{{userData.email}}</span></p>
             <p>Role: <span class="p" style="font-weight: 600;">{{userData.ROLE}}</span></p>
