--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -36,7 +36,7 @@
           <td style="text-align: center;">{{ employee?.DATE_OF_BIRTH | date }}</td>
           <td style="text-align: center;">{{ employee?.EMAIL_ADDRESS }}</td>
           <td style="text-align: center;">{{ employee?.WORK_LOCATION }}</td>
-          <td style="text-align: center;">{{ employee?.DATE_OF_JOINING }}</td>
+          <td style="text-align: center;">{{ employee?.DATE_OF_JOINING | date }}</td>
         </tr>
       </tbody>
     </table>
