--- a/src/app/otp/reset/reset.component.html
+++ b/src/app/otp/reset/reset.component.html
@@ -46,7 +46,7 @@
             <li><i class="fas fa-circle-exclamation"></i> Must be at least 8 characters long</li>
             <li><i class="fas fa-circle-exclamation"></i> Must contain at least one uppercase and one lowercase letter (A-Z)</li>
             <li><i class="fas fa-circle-exclamation"></i> Must contain a number</li>
-            <li><i class="fas fa-circle-exclamation"></i> Must contain a special character (!, %, @, #, etc.)</li>
+            <li><i class="fas fa-circle-exclamation"></i> Must contain a special character (!, %, #,&#64; etc...)</li>
           </ul>
         </div>
       </form>
