--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <a routerLink="/landing">Home</a>
       </li>
       <li class="head has-submenu" style="margin-top: 1%; margin-bottom: 0.5%; display: flex; flex-direction: row;">
-        <a routerLink="/landing">Employee</a>
+        <a>Employee</a>
         <ul class="submenu">
           <li><a routerLink="/addNewEmployeePage">Add Profile</a></li>
           <li><a routerLink="/viewEmployees">View Profiles</a></li>
