--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -46,7 +46,7 @@
                     <tr>
                         <th style="width: 15%;">Employee Number</th>
                         <th style="width: 25%;">Name</th>
-                        <th style="width: 15%;">Date of Confirmation</th>
+                        <th style="width: 20%;">Date of Confirmation</th>
                         <th>Message</th>
                     </tr>
  
@@ -54,7 +54,7 @@
  
                         <td>{{empData.EMP_NO}}</td>
                         <td>{{empData.FIRST_NAME}}</td>
-                        <td>{{empData.CONFIRMATION_DATE | date}}</td>
+                        <td>{{empData.conformationdate | date}}</td>
                         <td>{{empData.msg}}</td>
 
                     </tr>
