--- a/src/app/view-employees/employee-filter/employee-filter.component.css
+++ b/src/app/view-employees/employee-filter/employee-filter.component.css
@@ -1,3 +1,7 @@
+.container{
+  
+}
+
 #empheading {
     padding: 2%;
 }
@@ -48,7 +52,7 @@ label {
 }
  
 .card {
-  margin-left: 19%;
+    margin-left: 19%;
     width: 65%;
     border: 1px solid white !important;
     border-radius: none !important;
