removed employee auto pop

--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -34,7 +34,7 @@
             "
             class="text-danger ms-3"
           >
-            *Invalid Date (No Saturdays, Sundays, Holidays)
+            *Invalid Date (No Saturdays, Sundays)
           </div>
         </div>
 
