--- a/src/app/view-employees/edit-details/edit-details.component.html
+++ b/src/app/view-employees/edit-details/edit-details.component.html
@@ -419,7 +419,7 @@
             <button
               class="btn btn-primary animated"
               (click)="closeModal('custom-modal-3'); emergency()"
-              style="margin-left: 15%; width: 270px; margin-bottom: 3%"
+              style="margin-left: 15%; width: 270px; bottom: 50%"
             >
               <span class="text">Emergency Details</span>
             </button>
@@ -900,7 +900,7 @@
 
                 <div (click)="cls('custom-modal-4')">
                   <button
-                    (click)="openModal('custom-modal-3')"
+                    (click)="openModal('custom-modal-2')"
                     class="btn btn-primary esdButtons animated"
                     role="button"
                     style="margin-left: 20px; background-color: gray"
@@ -1395,7 +1395,7 @@
             class="btn-close"
             data-dismiss="modal"
             aria-label="Close"
-            (click)="openModal('custom-modal-3')"
+            (click)="openModal('custom-modal-2')"
           ></button
         ></span>
 
